base/policies/custom/bundles/nsa-cisa-k8s-v1.2/se-running-as-non-root.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: nsa-cisa-k8s-v1.2-running-as-non-root
  labels:
    policycontroller.gke.io/bundleName: nsa-cisa-k8s-v1.2
  annotations:
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'nsa-cisa-k8s-v1.2',
        bundleDisplayName: 'NSA CISA Kubernetes Hardening Guide v1.2',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-nsa-cisa-k8s-v1.2',
        bundleVersion: '202312.1',
        bundleDescription: 'Use the NSA CISA Kubernetes Hardening Guide v1.2 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the NSA CISA Kubernetes Hardening Guide v1.2.',
        controlNumbers: '[]',
        severity: 'Medium',
        description: 'Restricts containers from running as the root user.',
        remediation: 'Containers cannot run with `runAsUser` set to `root` or `runAsGroup` set to `root`. Containers also cannot set `fsGroup` or `supplementalGroups` to root. Set your containers with `runAsUser: ` and `runAsGroup: ` to a non-root ID. See "Set the security context for a Pod" for more information: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod',
        minimumTemplateLibraryVersion: '1.10.1',
        constraintHash: '824682799b90d2ab76b3c3909e844605ad09dde4f8a2082de38310311ced466a'
      }"
    policycontroller.gke.io/bundleVersion: "202312.1"
spec:
  enforcementAction: dryrun
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
    excludedNamespaces:
    - kube-system
    - asm-system
    - config-management-system
    - config-management-monitoring
    - cert-manager
    - gke-connect
    - istio-system
    - resource-group-system
    - gatekeeper-system
    - anthos-identity-service
    - apigee
    - apigee-system
  parameters:
    exemptImages:
    - gcr.io/gke-release/asm/proxyv2:*
    - gcr.io/anthos-baremetal-release/*
    - gke.gcr.io/*
    - docker.io/clamav/clamav:1.3.0
    runAsUser:
      rule: MustRunAs
      ranges:
      - min: 1
        max: 65536
    runAsGroup:
      rule: MustRunAs
      ranges:
      - min: 1
        max: 65536
    supplementalGroups:
      rule: MayRunAs
      ranges:
      - min: 1
        max: 65536
    fsGroup:
      rule: MayRunAs
      ranges:
      - min: 1
        max: 65536
